--- a/README
+++ b/README
@@ -2,6 +2,5 @@ What is it?
 ===========
 Collect academic conferences and workshops to help you know the deadline.
 
-conflist is created with ramaze. This is my first journey with ruby webframework, 
-so feel free to criticse.
+conflist is created with ramaze. 
 
