calendar and view update.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 1. pagnate
-2. calendar input color fix
-3. auto forms for adding and editing
+2. auto forms for adding and editing
+3. RSS/Atom
+4. Google site search
